# SciAgent-RAG

./: .gitignore  LICENSE  README.md  TREE.md
.trae/documents/: fix_animation_generation_plan.md
.trae/specs/fix-animation-execution/: checklist.md  spec.md  tasks.md
.trae/specs/fix-code-generation-response/: checklist.md  spec.md  tasks.md
.trae/specs/fix-empty-animation-scene/: checklist.md  spec.md  tasks.md
.trae/specs/fix-latex-and-animation/: checklist.md  spec.md  tasks.md
.trae/specs/improve-ai-response-and-ui/: checklist.md  spec.md  tasks.md
sciagent-rag/: start-all.sh
sciagent-rag/backend/: .env.example  TREE.md  command_prompt_manager.py  config.py  directory_navigation.sh  langgraph_manager.py  llm_factory.py  main.py  multimodal_ocr_manager.py  process_all_books.py  pyproject.toml  rag_agent.py  simulation_command_validator.py  solve_pipeline.py  start.sh  test_llm_config.py  test_vector_db.py  vector_db_manager.py  verify_rag.py
sciagent-rag/backend/schemas/: simulation_command.json
sciagent-rag/data/experiments/: physics_experiment_1.md
sciagent-rag/frontend/: index.html  package-lock.json  package.json  start.sh
sciagent-rag/frontend/src/: App.jsx  DebugAPI.jsx  LatexRenderer.jsx  Navigation.jsx  RAGManager.jsx  index.css
sciagent-rag/frontend/src/components/: AnimationControls.jsx  ChatPanel.jsx  CodeSandbox.js  ImageUploader.jsx  SimulationCanvas.jsx  SimulationHelpers.js  SolutionDisplay.jsx
sciagent-rag/frontend/src/context/: SimulationContext.jsx
sciagent-rag/frontend/src/pages/: SimulationPage.jsx
(+2 files in other folders)
